[gd_scene load_steps=5 format=3 uid="uid://jmojca2l0wb4"]

[ext_resource type="Script" path="res://CharacterController/addons/ultimate_character/ucharacterbody3d.gd" id="1_v68ga"]
[ext_resource type="PackedScene" uid="uid://bd5vtp7ctpic5" path="res://Scenes/Player/camera.tscn" id="2_febgm"]
[ext_resource type="PackedScene" uid="uid://64mlfhbptu5x" path="res://Scenes/Graph/vertex_checker.tscn" id="3_vwoxq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b3u2x"]
radius = 0.241512
height = 0.85248

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0531486, 0)
collision_layer = 3
script = ExtResource("1_v68ga")
walk_speed = 6.0
standing_height = 0.85
LEFT = "left"
RIGHT = "right"
FORWARD = "forward"
BACKWARD = "backward"
MOUSE_SENSITIVITY = 0.1
strafe_tilt_rotation = 4.0
strafe_tilt_weight = 0.11487
movement_animation_threshold = 3.0

[node name="CollisionShapeNormal" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.387043, 0)
shape = SubResource("CapsuleShape3D_b3u2x")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.629446, 0)

[node name="Camera" parent="Head" instance=ExtResource("2_febgm")]
current = true

[node name="VertexChecker" parent="." instance=ExtResource("3_vwoxq")]

[node name="UpdateVertex" type="Timer" parent="."]
autostart = true

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[connection signal="timeout" from="UpdateVertex" to="." method="_on_update_vertex_timeout"]
